Tech tree rework 1
initially more open, can make Power Plant, Barracks or Refinery right away.
Construction Yard grants 50 Power.

Infantry changes
Attack Dog requires a Radar Dome instead of a Kennel.
Disabled the Kennel from getting built.
Grenadier requires a Service Depot.
Rocket Soldier requires a War Factory.
Flamethrower requires a Tech Center.
Engineer requires a Refinery.
Have got rid of the seperate British Spy definition. The discount gets handled on the Spy itself with Multiplier traits.
Medic requires a Radar Dome.
Thief requires a Service Depot. Swapped places of Thief and Flamethrower on the Sidebar.
Shock Trooper no longer requires a Tesla Coil in addition to Tech Center.

Vehicle Changes
War Factory requires a Power Plant and Barracks, changed from need only a Refinery.
APC made available for both with a Barracks.
Swapped places of Ranger and Light Tank in the sidebar.
Mammoth Tank does not need a Service Depot in addition to a Tech Center.
Supply Truck requires a Refinery.
Mobile GAP Generator made available for every Allies.
Mobile Radar Jammer is now England specific and has been lowered a tech tier, requires a Radar Dome instead of a Tech Center.
Tesla Tank does not require a Tesla Coil in addition to a Tech Center.
MAD Tank does not require a Service Depot in addition to a Tech Center

Air Changes
Helipad requires a War Factory, changed from Radar Dome.
This means Chinooks can be obtained faster,
Longbow requires Radar Dome instead of a Tech Center now. Price reduced to 1500 from 2000.
Blackhawk requires a Tech Center, price increased to 2000 from 1500.
Swapped places of Longbow and Blackhand in the Sidebar.

Airfield can be built after Power Plant and Barracks, this means it can begin charging Paratroopers right out.
Spy Plane and Air Drop changed to also need a Radar Dome.
Parabombs changed to also require a Tech Center.
Yak Plane requires a Radar Dome, to ensure cannot be spammed right away so early.
Spy Plane given a new icon.

Naval Change

--- a/mods/sovra/rules/infantry.yaml
+++ b/mods/sovra/rules/infantry.yaml
@@ -4,7 +4,7 @@ DOG:
 		Queue: Infantry
 		BuildAtProductionType: Dog
 		BuildPaletteOrder: 50
-		Prerequisites: ~kenn, ~techlevel.infonly
+		Prerequisites: ~barr, dome, ~techlevel.medium
 		Description: Anti-infantry unit.\nCan detect spies.\n  Strong vs Infantry\n  Weak vs Vehicles, Aircraft
 	Valued:
 		Cost: 200
@@ -75,7 +75,7 @@ E1:
 		Queue: Infantry
 		BuildAtProductionType: Soldier
 		BuildPaletteOrder: 10
-		Prerequisites: ~barracks, ~techlevel.infonly
+		Prerequisites: barracks, ~techlevel.infonly
 		Description: General-purpose infantry.\n  Strong vs Infantry\n  Weak vs Vehicles, Aircraft
 	Selectable:
 		Class: E1
@@ -128,7 +128,7 @@ E2:
 		Queue: Infantry
 		BuildAtProductionType: Soldier
 		BuildPaletteOrder: 40
-		Prerequisites: ~barr, ~techlevel.infonly
+		Prerequisites: ~barr, fix, ~techlevel.infonly
 		Description: Infantry armed with grenades.\n  Strong vs Buildings, Infantry\n  Weak vs Vehicles, Aircraft
 	Valued:
 		Cost: 160
@@ -175,7 +175,7 @@ E3:
 		Queue: Infantry
 		BuildAtProductionType: Soldier
 		BuildPaletteOrder: 30
-		Prerequisites: ~barracks, ~techlevel.infonly
+		Prerequisites: ~barracks, weap, ~techlevel.infonly
 		Description: Anti-tank/Anti-aircraft infantry.\n  Strong vs Vehicles, Aircraft\n  Weak vs Infantry
 	Selectable:
 		Class: E3
@@ -235,8 +235,8 @@ E4:
 	Buildable:
 		Queue: Infantry
 		BuildAtProductionType: Soldier
-		BuildPaletteOrder: 70
-		Prerequisites: ~barr, ftur, ~techlevel.low
+		BuildPaletteOrder: 110
+		Prerequisites: ~barr, stek, ~techlevel.high
 		Description: Advanced anti-structure unit.\n  Strong vs Infantry, Buildings\n  Weak vs Vehicles, Aircraft
 	Valued:
 		Cost: 300
@@ -280,7 +280,7 @@ E6:
 		Queue: Infantry
 		BuildAtProductionType: Soldier
 		BuildPaletteOrder: 60
-		Prerequisites: ~barracks, ~techlevel.infonly
+		Prerequisites: proc, ~techlevel.infonly
 		Description: Infiltrates and captures\nenemy structures.\n  Unarmed
 	Valued:
 		Cost: 400
@@ -327,7 +327,7 @@ SPY:
 		Queue: Infantry
 		BuildAtProductionType: Soldier
 		BuildPaletteOrder: 90
-		Prerequisites: ~!infantry.england, dome, ~tent, ~techlevel.medium
+		Prerequisites: ~tent, dome, ~techlevel.medium
 		Description: Infiltrates enemy structures for intel or\nsabotage. Exact effect depends on the\nbuilding infiltrated.\nLoses disguise when attacking.\nCan detect spies.\n  Strong vs Infantry\n  Weak vs Vehicles, Aircraft\n  Special Ability: Disguised
 	Valued:
 		Cost: 500
@@ -379,19 +379,15 @@ SPY:
 		Voice: Move
 	Voiced:
 		VoiceSet: SpyVoice
-
-SPY.England:
-	Inherits: SPY
-	Buildable:
-		Prerequisites: ~infantry.england, dome, ~tent, ~techlevel.medium
-	Valued:
-		Cost: 250
-	GivesExperience:
-		Experience: 500
-	DisguiseTooltip:
-		Name: British Spy
-	RenderSprites:
-		Image: spy
+    ProductionCostMultiplier@england:
+        Multiplier: 50
+        Prerequisites: infantry.england
+    GivesExperienceMultiplier@england:
+        Modifier: 150
+        RequiresCondition: owner.england
+    GrantConditionOnPrerequisite@england:
+        Condition: owner.england
+        Prerequisites: infantry.england
 
 E7:
 	Inherits: ^Soldier
@@ -463,7 +459,7 @@ MEDI:
 		Queue: Infantry
 		BuildAtProductionType: Soldier
 		BuildPaletteOrder: 40
-		Prerequisites: ~tent, ~techlevel.infonly
+		Prerequisites: ~tent, dome, ~techlevel.infonly
 		Description: Heals nearby infantry.\n  Unarmed
 	Valued:
 		Cost: 200
@@ -623,8 +619,8 @@ THF:
 	Buildable:
 		Queue: Infantry
 		BuildAtProductionType: Soldier
-		BuildPaletteOrder: 110
-		Prerequisites: ~barr, dome, ~techlevel.medium
+		BuildPaletteOrder: 70
+		Prerequisites: ~barr, fix, ~techlevel.medium
 		Description: Steals enemy credits.\nHijacks enemy vehicles.\n  Unarmed
 	Valued:
 		Cost: 500
@@ -681,7 +677,7 @@ SHOK:
 		Queue: Infantry
 		BuildAtProductionType: Soldier
 		BuildPaletteOrder: 130
-		Prerequisites: ~barr, stek, tsla, ~infantry.russia, ~techlevel.high
+		Prerequisites: ~barr, stek, ~infantry.russia, ~techlevel.high
 		Description: Elite infantry with portable Tesla coils.\n  Strong vs Infantry, Vehicles\n  Weak vs Aircraft
 	Valued:
 		Cost: 350
