--- a/mods/sovra/weapons/ballistics.yaml
+++ b/mods/sovra/weapons/ballistics.yaml
@@ -218,3 +218,40 @@ DepthCharge:
 	Warhead@5EffSubmergedHitSound: CreateEffect
 		ImpactSounds: h2obomb2.aud
 		ValidTargets: Underwater
+
+GrenadeLauncher:
+    Inherits: ^Artillery
+	ReloadDelay: 60
+    Range: 5c256
+	ValidTargets: Ground, GroundActor
+    InvalidTargets: Water, WaterActor
+	Report: grenade1.aud
+	Projectile: Bullet
+		Speed: 136
+		Blockable: false
+		LaunchAngle: 62
+		Inaccuracy: 554
+		Image: BOMB
+        Shadow: true
+	Warhead@1Dam: SpreadDamage
+		Spread: 341
+		Damage: 5000
+		Versus:
+			None: 60
+			Wood: 100
+			Light: 25
+			Heavy: 25
+			Concrete: 100
+		DamageTypes: Prone50Percent, TriggerProne, SmallExplosionDeath
+	Warhead@2Smu: LeaveSmudge
+		SmudgeType: Crater
+		ValidTargets: Ground, Infantry
+	Warhead@3Eff: CreateEffect
+		Explosions: med_explosion
+		ImpactSounds: kaboom25.aud
+		ValidTargets: Ground, GroundActor, WaterActor, Trees
+	Warhead@4EffWater: CreateEffect
+		Explosions: small_splash
+		ImpactSounds: splash9.aud
+		ValidTargets: Water, Underwater
+		InvalidTargets: Bridge
