--- a/mods/sovra/rules/ai.yaml
+++ b/mods/sovra/rules/ai.yaml
@@ -89,6 +89,21 @@ Player:
 					Attractiveness: -10
 					TargetMetric: Value
 					CheckRadius: 7c0
+			sonarpulse:
+				OrderName: SonarPulse
+				MinimumAttractiveness: 5
+				Consideration@1:
+					Against: Enemy
+					Types: WaterActor
+					Attractiveness: 2
+					TargetMetric: None
+					CheckRadius: 5c0
+				Consideration@2:
+					Against: Enemy
+					Types: WaterActor, Structure
+					Attractiveness: 1
+					TargetMetric: None
+					CheckRadius: 10c0
 	HarvesterBotModule:
 		RequiresCondition: enable-rush-ai || enable-normal-ai || enable-turtle-ai || enable-naval-ai
 		HarvesterTypes: harv
@@ -299,7 +314,7 @@ Player:
 	SquadManagerBotModule@rush:
 		RequiresCondition: enable-rush-ai
 		SquadSize: 20
-		NavalUnitsTypes: ss, msub, dd, ca, lst, pt
+		NavalUnitsTypes: seas, ss, msub, dd, ca, lst, pt
 		ExcludeFromSquadsTypes: harv, mcv, dog, badr.bomber, u2
 		ConstructionYardTypes: fact
 		AirUnitsTypes: mig, yak, heli, hind, mh60
@@ -339,7 +354,7 @@ Player:
 	SquadManagerBotModule@normal:
 		RequiresCondition: enable-normal-ai
 		SquadSize: 40
-		NavalUnitsTypes: ss, msub, dd, ca, lst, pt
+		NavalUnitsTypes: seas, ss, msub, dd, ca, lst, pt
 		ExcludeFromSquadsTypes: harv, mcv, dog, badr.bomber, u2
 		ConstructionYardTypes: fact
 		NavalProductionTypes: spen, syrd
@@ -371,6 +386,7 @@ Player:
 			mh60: 30
 			mig: 30
 			yak: 30
+            seas: 10
 			ss: 10
 			msub: 10
 			dd: 10
@@ -384,7 +400,7 @@ Player:
 	SquadManagerBotModule@turtle:
 		RequiresCondition: enable-turtle-ai
 		SquadSize: 10
-		NavalUnitsTypes: ss, msub, dd, ca, lst, pt
+		NavalUnitsTypes: seas, ss, msub, dd, ca, lst, pt
 		ExcludeFromSquadsTypes: harv, mcv, dog, badr.bomber, u2
 		ConstructionYardTypes: fact
 		NavalProductionTypes: spen, syrd
@@ -416,6 +432,7 @@ Player:
 			mh60: 30
 			mig: 30
 			yak: 30
+            seas: 10
 			ss: 10
 			msub: 10
 			dd: 10
@@ -430,7 +447,7 @@ Player:
 		RequiresCondition: enable-naval-ai
 		SquadSize: 1
 		ExcludeFromSquadsTypes: harv, mcv, dog, badr.bomber, u2
-		NavalUnitsTypes: ss, msub, dd, ca, lst, pt
+		NavalUnitsTypes: seas, ss, msub, dd, ca, lst, pt
 		ConstructionYardTypes: fact
 		NavalProductionTypes: spen, syrd
 		AirUnitsTypes: mig, yak, heli, hind, mh60
@@ -444,6 +461,7 @@ Player:
 			mh60: 30
 			mig: 30
 			yak: 30
+            seas: 10
 			ss: 10
 			msub: 30
 			dd: 30
