--- a/mods/sovra/rules/aircraft.yaml
+++ b/mods/sovra/rules/aircraft.yaml
@@ -146,7 +146,7 @@ YAK:
 		Queue: Aircraft
 		BuildAtProductionType: Plane
 		BuildPaletteOrder: 30
-		Prerequisites: ~afld, ~techlevel.medium
+		Prerequisites: ~afld, dome, ~techlevel.medium
 		Description: Attack Plane armed with\ndual machine guns.\n  Strong vs Infantry, Light armor\n  Weak vs Tanks, Aircraft
 	Valued:
 		Cost: 1350
@@ -229,7 +229,7 @@ TRAN:
 		Queue: Aircraft
 		BuildAtProductionType: Helicopter
 		BuildPaletteOrder: 10
-		Prerequisites: ~hpad, ~techlevel.medium
+		Prerequisites: hpad, ~techlevel.medium
 		Description: Fast Infantry Transport Helicopter.\n  Unarmed
 	Valued:
 		Cost: 900
@@ -282,11 +282,11 @@ HELI:
 	Buildable:
 		Queue: Aircraft
 		BuildAtProductionType: Helicopter
-		BuildPaletteOrder: 40
-		Prerequisites: ~hpad, atek, ~techlevel.high
+		BuildPaletteOrder: 20
+		Prerequisites: ~hpad, dome, ~techlevel.medium
 		Description: Helicopter gunship armed\nwith multi-purpose missiles.\n  Strong vs Buildings, Vehicles, Aircraft\n  Weak vs Infantry
 	Valued:
-		Cost: 2000
+		Cost: 1500
 	Tooltip:
 		Name: Longbow
 	UpdatesPlayerStatistics:
@@ -488,11 +488,11 @@ MH60:
 	Buildable:
 		Queue: Aircraft
 		BuildAtProductionType: Helicopter
-		BuildPaletteOrder: 20
-		Prerequisites: ~hpad, ~techlevel.medium
+		BuildPaletteOrder: 40
+		Prerequisites: ~hpad, atek, ~techlevel.high
 		Description: Helicopter gunship armed\nwith dual chainguns.\n  Strong vs Infantry, Light armor\n  Weak vs Tanks, Aircraft
 	Valued:
-		Cost: 1500
+		Cost: 2000
 	Tooltip:
 		Name: Black Hawk
 	UpdatesPlayerStatistics:
