--- a/mods/sovra/rules/structures.yaml
+++ b/mods/sovra/rules/structures.yaml
@@ -126,10 +126,6 @@ SPEN:
 	Inherits@PRIMARY: ^PrimaryBuilding
 	Selectable:
 		Bounds: 3072, 2048
-	InfiltrateForSupportPower:
-		Proxy: powerproxy.sonarpulse
-		Types: SpyInfiltrate
-		PlayerExperience: 10
 	Valued:
 		Cost: 800
 	Tooltip:
@@ -137,10 +133,10 @@ SPEN:
 	Buildable:
 		Queue: Building
 		BuildPaletteOrder: 50
-		Prerequisites: anypower, ~structures.soviet, ~techlevel.low
+		Prerequisites: anypower, barracks, ~structures.soviet, ~techlevel.low
 		Description: Produces and repairs\nsubmarines and transports.
 	Targetable:
-		TargetTypes: WaterActor, Structure, C4, DetonateAttack, SpyInfiltrate
+		TargetTypes: WaterActor, Structure, C4, DetonateAttack
 	Building:
 		Footprint: XXX xxx XXX
 		Dimensions: 3,3
@@ -271,27 +267,29 @@ SPEN:
 		Type: Rectangle
 			TopLeft: -555, -1110
 			BottomRight: 555, 1110
+	FreeActor@SonarPulse:
+		Actor: powerproxy.sonarpulse
+        RequiresCondition: dome.built
+    GrantConditionOnPrerequisite@SonarPulse:
+        Condition: dome.built
+        Prerequisites: dome
 
 SYRD:
 	Inherits: ^Building
 	Inherits@PRIMARY: ^PrimaryBuilding
 	Selectable:
 		Bounds: 3072, 2048
-	InfiltrateForSupportPower:
-		Proxy: powerproxy.sonarpulse
-		Types: SpyInfiltrate
-		PlayerExperience: 10
 	Buildable:
 		Queue: Building
-		BuildPaletteOrder: 40
-		Prerequisites: anypower, ~structures.allies, ~techlevel.low
+		BuildPaletteOrder: 100
+		Prerequisites: anypower, barracks, ~structures.allies, ~techlevel.low
 		Description: Produces and repairs\nships and transports.
 	Valued:
 		Cost: 1000
 	Tooltip:
 		Name: Naval Yard
 	Targetable:
-		TargetTypes: WaterActor, Structure, C4, DetonateAttack, SpyInfiltrate
+		TargetTypes: WaterActor, Structure, C4, DetonateAttack
 	Building:
 		Footprint: XXX xxx XXX
 		Dimensions: 3,3
@@ -398,6 +396,8 @@ SYRD:
 		Type: Rectangle
 			TopLeft: -512, 598
 			BottomRight: 512, 1110
+	FreeActor@SonarPulse:
+		Actor: powerproxy.sonarpulse
 
 IRON:
 	Inherits: ^ScienceBuilding
@@ -573,7 +573,7 @@ TSLA:
 	Buildable:
 		Queue: Defense
 		BuildPaletteOrder: 80
-		Prerequisites: weap, ~structures.soviet, ~techlevel.medium
+		Prerequisites: stek, ~structures.soviet, ~techlevel.medium
 		Description: Advanced base defense.\nRequires power to operate.\nCan detect cloaked units.\n  Strong vs Vehicles, Infantry\n  Weak vs Aircraft
 	Valued:
 		Cost: 1200
@@ -672,7 +672,7 @@ DOME:
 	Buildable:
 		Queue: Building
 		BuildPaletteOrder: 90
-		Prerequisites: proc, ~techlevel.medium
+		Prerequisites: proc, weap, ~techlevel.medium
 		Description: Provides an overview\nof the battlefield.\nRequires power to operate.
 	Valued:
 		Cost: 1500
@@ -777,7 +777,7 @@ HBOX:
 	Buildable:
 		Queue: Defense
 		BuildPaletteOrder: 50
-		Prerequisites: tent, ~structures.allies, ~techlevel.medium
+		Prerequisites: dome, ~structures.allies, ~techlevel.medium
 		Description: Camouflaged static defense with a fireport\nfor a garrisoned soldier.\nCan detect cloaked units.\n  Strong vs Infantry, Light armor\n  Weak vs Tanks, Aircraft
 	Valued:
 		Cost: 750
@@ -836,7 +836,7 @@ GUN:
 	Buildable:
 		Queue: Defense
 		BuildPaletteOrder: 70
-		Prerequisites: tent, ~structures.allies, ~techlevel.medium
+		Prerequisites: weap, ~structures.allies, ~techlevel.medium
 		Description: Anti-Armor base defense.\nCan detect cloaked units.\n  Strong vs Vehicles\n  Weak vs Infantry, Aircraft
 	Valued:
 		Cost: 800
@@ -885,7 +885,7 @@ FTUR:
 	Buildable:
 		Queue: Defense
 		BuildPaletteOrder: 60
-		Prerequisites: barr, ~structures.soviet, ~techlevel.low
+		Prerequisites: weap, ~structures.soviet, ~techlevel.medium
 		Description: Anti-Infantry base defense.\nCan detect cloaked units.\n  Strong vs Infantry, Light armor\n  Weak vs Tanks, Aircraft
 	Valued:
 		Cost: 600
@@ -1044,7 +1044,7 @@ WEAP:
 	Buildable:
 		Queue: Building
 		BuildPaletteOrder: 80
-		Prerequisites: proc, ~techlevel.low
+		Prerequisites: anypower, barracks, ~techlevel.low
 		Description: Produces vehicles.
 	Valued:
 		Cost: 2000
@@ -1165,7 +1165,7 @@ FACT:
 	Buildable:
 		Queue: Building
 		BuildPaletteOrder: 1000
-		Prerequisites: ~disabled
+		Prerequisites: weap, fix, ~techlevel.medium
 		Description: Produces structures.
 	ProvidesPrerequisite@allies:
 		Factions: allies, england, france, germany
@@ -1254,7 +1254,7 @@ FACT:
 	WithBuildingPlacedAnimation:
 		RequiresCondition: !build-incomplete && !chrono-vortex
 	Power:
-		Amount: 0
+		Amount: 50
 	WithDeathAnimation:
 		DeathSequence: dead
 		UseDeathTypeSuffix: false
@@ -1276,7 +1276,7 @@ PROC:
 	Buildable:
 		Queue: Building
 		BuildPaletteOrder: 60
-		Prerequisites: anypower, ~techlevel.infonly
+		Prerequisites: fact, ~techlevel.infonly
 		Description: Refines Ore and Gems\ninto credits.
 	Valued:
 		Cost: 1400
@@ -1416,7 +1416,7 @@ HPAD:
 	Buildable:
 		Queue: Building
 		BuildPaletteOrder: 120
-		Prerequisites: dome, ~structures.allies, ~techlevel.medium
+		Prerequisites: weap, ~structures.allies, ~techlevel.medium
 		Description: Produces and reloads\nhelicopters.
 	Valued:
 		Cost: 500
@@ -1503,7 +1503,7 @@ AFLD:
 	Buildable:
 		Queue: Building
 		BuildPaletteOrder: 130
-		Prerequisites: dome, ~structures.soviet, ~techlevel.medium, ~!structures.ukraine, ~!structures.belarus
+		Prerequisites: anypower, barracks, ~structures.soviet, ~techlevel.medium, ~!structures.ukraine, ~!structures.belarus
 		Description: Produces and reloads aircraft.\n  Special Ability: Spy Plane\n  Special Ability: Paratroopers
 	Valued:
 		Cost: 500
@@ -1568,7 +1568,7 @@ AFLD:
 		Prerequisite: aircraft.belarus
 	AirstrikePower@spyplane:
 		OrderName: SovietSpyPlane
-		Prerequisites: aircraft.soviet
+		Prerequisites: dome, aircraft.soviet
 		Icon: spyplane
 		ChargeInterval: 3750
 		Name: Spy Plane
@@ -1614,7 +1614,7 @@ AFLD:
 		SupportPowerPaletteOrder: 50
 	AirstrikePower@parabombs:
 		OrderName: UkraineParabombs
-		Prerequisites: aircraft.ukraine
+		Prerequisites: stek, aircraft.ukraine
 		Icon: parabombs
 		ChargeInterval: 7500
 		Name: Parabombs
@@ -1637,7 +1637,7 @@ AFLD:
 		SupportPowerPaletteOrder: 40
 	ParatroopersPower@airdrop:
 		OrderName: BelarusAirdrop
-		Prerequisites: aircraft.belarus
+		Prerequisites: dome, aircraft.belarus
 		Icon: airdrop
 		ChargeInterval: 7500
 		Name: Air Drop
@@ -1677,7 +1677,7 @@ AFLD:
 AFLD.Ukraine:
 	Inherits: AFLD
 	Buildable:
-		Prerequisites: dome, ~techlevel.medium, ~structures.ukraine
+		Prerequisites: anypower, barracks, ~techlevel.medium, ~structures.ukraine
 		Description: Produces and reloads aircraft.\n  Special Ability: Spy Plane\n  Special Ability: Paratroopers\n  Special Ability: Parabombs
 	RenderSprites:
 		Image: afld
@@ -1685,7 +1685,7 @@ AFLD.Ukraine:
 AFLD.Belarus:
 	Inherits: AFLD
 	Buildable:
-		Prerequisites: dome, ~techlevel.medium, ~structures.belarus
+		Prerequisites: anypower, barracks, ~techlevel.medium, ~structures.belarus
 		Description: Produces and reloads aircraft.\n  Special Ability: Spy Plane\n  Special Ability: Paratroopers\n  Special Ability: Air Drop
 	RenderSprites:
 		Image: afld
@@ -1702,7 +1702,7 @@ POWR:
 	Buildable:
 		Queue: Building
 		BuildPaletteOrder: 10
-		Prerequisites: ~techlevel.infonly
+		Prerequisites: fact, ~techlevel.infonly
 		Description: Provides power for other structures.
 	Valued:
 		Cost: 300
@@ -1738,7 +1738,7 @@ APWR:
 		TargetableOffsets: -355,-1024,0
 	Buildable:
 		Queue: Building
-		BuildPaletteOrder: 110
+		BuildPaletteOrder: 40
 		Prerequisites: dome, ~techlevel.medium
 		Description: Provides double the power of\na standard Power Plant.
 	Valued:
@@ -1819,7 +1819,7 @@ BARR:
 	Buildable:
 		Queue: Building
 		BuildPaletteOrder: 30
-		Prerequisites: anypower, ~structures.soviet, ~techlevel.infonly
+		Prerequisites: fact, ~structures.soviet, ~techlevel.infonly
 		Description: Trains infantry.
 	Valued:
 		Cost: 500
@@ -1910,7 +1910,7 @@ KENN:
 	Buildable:
 		Queue: Building
 		BuildPaletteOrder: 175
-		Prerequisites: anypower, ~structures.soviet, ~techlevel.infonly
+		Prerequisites: ~disabled
 		Description: Trains Attack Dogs.
 	Valued:
 		Cost: 200
@@ -1993,7 +1993,7 @@ TENT:
 	Buildable:
 		Queue: Building
 		BuildPaletteOrder: 20
-		Prerequisites: anypower, ~structures.allies, ~techlevel.infonly
+		Prerequisites: fact, ~structures.allies, ~techlevel.infonly
 		Description: Trains infantry.
 	Valued:
 		Cost: 500
@@ -2080,7 +2080,7 @@ FIX:
 	Inherits: ^Building
 	Buildable:
 		Queue: Building
-		BuildPaletteOrder: 100
+		BuildPaletteOrder: 110
 		Prerequisites: weap, ~techlevel.medium
 		Description: Repairs vehicles for credits.
 	Valued:
@@ -2132,7 +2132,7 @@ SBAG:
 	Buildable:
 		Queue: Defense
 		BuildPaletteOrder: 10
-		Prerequisites: fact, ~structures.allies, ~techlevel.low
+		Prerequisites: tent, ~structures.allies, ~techlevel.low
 		Description: Stops infantry and light vehicles.\nCan be crushed by tanks.
 	Valued:
 		Cost: 30
@@ -2156,7 +2156,7 @@ FENC:
 	Buildable:
 		Queue: Defense
 		BuildPaletteOrder: 20
-		Prerequisites: fact, ~structures.soviet, ~techlevel.low
+		Prerequisites: barr, ~structures.soviet, ~techlevel.low
 		Description: Stops infantry and light vehicles.\nCan be crushed by tanks.
 	Valued:
 		Cost: 30
@@ -2180,7 +2180,7 @@ BRIK:
 	Buildable:
 		Queue: Defense
 		BuildPaletteOrder: 30
-		Prerequisites: fact, ~techlevel.medium
+		Prerequisites: techcenter, ~techlevel.high
 		Description: Stop units and blocks enemy fire.
 	Valued:
 		Cost: 200
