--- a/mods/sovra/rules/vehicles.yaml
+++ b/mods/sovra/rules/vehicles.yaml
@@ -57,7 +57,7 @@ V2RL:
 	Inherits@AUTOTARGET: ^AutoTargetGroundAssaultMove
 	Buildable:
 		Queue: Vehicle
-		BuildPaletteOrder: 120
+		BuildPaletteOrder: 130
 		Prerequisites: ~vehicles.allies, ~techlevel.low
 		Description: Fast tank, good for scouting.\n  Strong vs Light armor\n  Weak vs Infantry, Tanks, Aircraft
 	Valued:
@@ -215,7 +215,7 @@ V2RL:
 	Buildable:
 		Queue: Vehicle
 		BuildPaletteOrder: 320
-		Prerequisites: fix, stek, ~vehicles.soviet, ~techlevel.high
+		Prerequisites: stek, ~vehicles.soviet, ~techlevel.high
 		Description: Big and slow tank, with anti-air capability.\nCan crush concrete walls.\n  Strong vs Vehicles, Infantry, Aircraft\n  Weak vs Nothing
 	Valued:
 		Cost: 2000
@@ -425,8 +425,8 @@ JEEP:
 	Inherits@CARGOPIPS: ^CargoPips
 	Buildable:
 		Queue: Vehicle
-		BuildPaletteOrder: 130
-		Prerequisites: ~vehicles.allies, ~techlevel.low
+		BuildPaletteOrder: 120
+		Prerequisites: weap, ~vehicles.allies, ~techlevel.low
 		Description: Fast scout & anti-infantry vehicle.\nCan carry one infantry.\n  Strong vs Infantry\n  Weak vs Vehicles, Aircraft
 	Valued:
 		Cost: 500
@@ -475,8 +475,8 @@ APC:
 	Inherits@CARGOPIPS: ^CargoPips
 	Buildable:
 		Queue: Vehicle
-		BuildPaletteOrder: 120
-		Prerequisites: ~vehicles.soviet, ~techlevel.low
+		BuildPaletteOrder: 130
+		Prerequisites: barracks, ~techlevel.low
 		Description: Tough infantry transport.\n  Strong vs Infantry, Light armor\n  Weak vs Tanks, Aircraft
 	Valued:
 		Cost: 850
@@ -571,7 +571,7 @@ TRUK:
 	Buildable:
 		Queue: Vehicle
 		BuildPaletteOrder: 410
-		Prerequisites: ~techlevel.low
+		Prerequisites: proc, ~techlevel.low
 		Description: Transports cash to other players.\n  Unarmed
 	Valued:
 		Cost: 500
@@ -596,7 +596,7 @@ MGG:
 	Buildable:
 		Queue: Vehicle
 		BuildPaletteOrder: 330
-		Prerequisites: atek, ~vehicles.england, ~techlevel.high
+		Prerequisites: atek, ~vehicles.allies, ~techlevel.high
 		Description: Regenerates the shroud nearby, \nobscuring the area.\n  Unarmed
 	Valued:
 		Cost: 1000
@@ -636,7 +636,7 @@ MRJ:
 	Buildable:
 		Queue: Vehicle
 		BuildPaletteOrder: 320
-		Prerequisites: atek, ~vehicles.allies, ~techlevel.high
+		Prerequisites: dome, ~vehicles.england, ~techlevel.medium
 		Description: Jams nearby enemy radar domes\nand deflects incoming missiles.\n  Unarmed
 	Health:
 		HP: 22000
@@ -669,7 +669,7 @@ TTNK:
 	Buildable:
 		Queue: Vehicle
 		BuildPaletteOrder: 330
-		Prerequisites: tsla, stek, ~vehicles.russia, ~techlevel.high
+		Prerequisites: stek, ~vehicles.russia, ~techlevel.high
 		Description: Tank with mounted Tesla coil.\n  Strong vs Infantry, Vehicles, Buildings\n  Weak vs Aircraft
 	Valued:
 		Cost: 1350
@@ -711,8 +711,8 @@ FTRK:
 	Inherits@AUTOTARGET: ^AutoTargetAllAssaultMove
 	Buildable:
 		Queue: Vehicle
-		BuildPaletteOrder: 130
-		Prerequisites: ~vehicles.soviet, ~techlevel.low
+		BuildPaletteOrder: 120
+		Prerequisites: weap, ~vehicles.soviet, ~techlevel.low
 		Description: Mobile unit with mounted Flak cannon.\n  Strong vs Infantry, Light armor, Aircraft\n  Weak vs Tanks
 	Valued:
 		Cost: 600
@@ -741,11 +741,15 @@ FTRK:
 		Recoil: 85
 		LocalOffset: 512,0,192
 		MuzzleSequence: muzzle
+		PauseOnCondition: reload-ag
+        ReloadingCondition: reload-aa
 	Armament@AG:
 		Weapon: FLAK-23-AG
 		Recoil: 85
 		LocalOffset: 512,0,192
 		MuzzleSequence: muzzle
+		PauseOnCondition: reload-aa
+        ReloadingCondition: reload-ag
 	AttackTurreted:
 	WithMuzzleOverlay:
 	WithSpriteTurret:
@@ -850,7 +854,7 @@ QTNK:
 	Buildable:
 		Queue: Vehicle
 		BuildPaletteOrder: 330
-		Prerequisites: fix, stek, ~vehicles.belarus, ~techlevel.high
+		Prerequisites: stek, ~vehicles.belarus, ~techlevel.high
 		Description: Deals seismic damage to nearby vehicles\nand structures.\n  Strong vs Vehicles, Buildings\n  Weak vs Infantry, Aircraft
 	Valued:
 		Cost: 2000
